fix, feat: fix hero section tablet adaptive, add tablet adaptive in about section

--- a/style.css
+++ b/style.css
@@ -348,6 +348,12 @@ button {
     padding: 0 0 54px 0;
 }
 
+@media (max-width: 1380px) {
+    .hero__image-card--small {
+        display: none;
+    }
+}
+
 @media (max-width: 1300px) {
     .nav__list {
         display: none;
@@ -356,21 +362,15 @@ button {
     .nav__burger {
         display: block;
     }
-
-    .hero__img--small {
-        display: none;
-    }
-}
-
-@media (max-width: 1123px) {
-    .hero {
-        gap: 20px;
-    }
 }
 
 @media (max-width: 1107px) {
+    .hero {
+        gap: 34px;
+    }
+
     .hero__vertical {
-        height: 86.5%;
+        height: 98%;
     }
 
     .hero__content {
@@ -379,17 +379,21 @@ button {
     }
 
     .hero__container {
-        padding: 0;
+        padding: 0 27px 0px 0px;
     }
 
     .hero__title {
         font-size: 68px;
         line-height: 82px;
-        padding: 10px 0px 0 0;
+        padding: 10px 0px 0 36px;
+    }
+
+    .hero__description {
+        padding: 0px 60px 0 0px;
     }
 
     .hero__scroll {
-        padding: 132px 0 0px 0;
+        padding: 132px 256px 0px 0;
         margin-top: 0;
     }
 
@@ -401,14 +405,36 @@ button {
     .image-card__description {
         padding: 272px 10px 0 0;
     }
+
+    /* ABOUT section*/
+    .about {
+        padding: 44px 20px;
+    }
+
+    .about__content {
+        grid: auto-flow / 1fr;
+    }
+
+    .about__container:nth-child(2) {
+        gap: 40px;
+    }
+
+    .about__container:nth-child(2) .about__img {
+        padding: 0;
+    }
+
+    .about__container:nth-child(3)>.about__img {
+        display: none;
+    }
+
 }
 
 @media (max-width: 775px) {
-
-
     .hero__content {
-        padding: 0;
         width: 58%;
+        justify-content: center;
+        align-items: center;
+        padding: 75px 0 0 0;
     }
 }
 
